--- a/DUBStats/DUBStats.csproj
+++ b/DUBStats/DUBStats.csproj
@@ -40,9 +40,6 @@
     <Reference Include="DocX">
       <HintPath>dll\DocX.dll</HintPath>
     </Reference>
-    <Reference Include="Infragistics4.Shared.v14.1, Version=14.1.20141.2178, Culture=neutral, PublicKeyToken=7dd5c3163f2cd0cb" />
-    <Reference Include="Infragistics4.Win.Misc.v14.1, Version=14.1.20141.2178, Culture=neutral, PublicKeyToken=7dd5c3163f2cd0cb, processorArchitecture=MSIL" />
-    <Reference Include="Infragistics4.Win.v14.1, Version=14.1.20141.2178, Culture=neutral, PublicKeyToken=7dd5c3163f2cd0cb" />
     <Reference Include="itextsharp">
       <HintPath>dll\itextsharp.dll</HintPath>
     </Reference>
@@ -54,6 +51,13 @@
     </Reference>
     <Reference Include="itextsharp.xtra">
       <HintPath>dll\itextsharp.xtra.dll</HintPath>
+    </Reference>
+    <Reference Include="Microsoft.WindowsAPICodePack">
+      <HintPath>..\packages\Windows7APICodePack.JetBrains.Stripped.1.1.20150225.0\lib\Net\Microsoft.WindowsAPICodePack.dll</HintPath>
+    </Reference>
+    <Reference Include="Microsoft.WindowsAPICodePack.Shell, Version=1.1.0.0, Culture=neutral, PublicKeyToken=31bf3856ad364e35, processorArchitecture=MSIL">
+      <HintPath>..\packages\Windows7APICodePack.JetBrains.Stripped.1.1.20150225.0\lib\Net\Microsoft.WindowsAPICodePack.Shell.dll</HintPath>
+      <Private>True</Private>
     </Reference>
     <Reference Include="System" />
     <Reference Include="System.Core" />
@@ -72,6 +76,12 @@
     <Reference Include="WindowsBase" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="FilmName.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="FilmName.Designer.cs">
+      <DependentUpon>FilmName.cs</DependentUpon>
+    </Compile>
     <Compile Include="MainForm.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -81,6 +91,9 @@
     <Compile Include="PdfCreator.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <EmbeddedResource Include="FilmName.resx">
+      <DependentUpon>FilmName.cs</DependentUpon>
+    </EmbeddedResource>
     <EmbeddedResource Include="MainForm.resx">
       <DependentUpon>MainForm.cs</DependentUpon>
     </EmbeddedResource>
@@ -95,6 +108,7 @@
       <DependentUpon>Resources.resx</DependentUpon>
       <DesignTime>True</DesignTime>
     </Compile>
+    <None Include="packages.config" />
     <None Include="Properties\Settings.settings">
       <Generator>SettingsSingleFileGenerator</Generator>
       <LastGenOutput>Settings.Designer.cs</LastGenOutput>
