--- a/DUBStats/DUBStats.csproj
+++ b/DUBStats/DUBStats.csproj
@@ -9,7 +9,7 @@
     <AppDesignerFolder>Properties</AppDesignerFolder>
     <RootNamespace>DUBStats</RootNamespace>
     <AssemblyName>DUBStats</AssemblyName>
-    <TargetFrameworkVersion>v4.6.1</TargetFrameworkVersion>
+    <TargetFrameworkVersion>v4.6.2</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
     <SccProjectName>SAK</SccProjectName>
     <SccLocalPath>SAK</SccLocalPath>
@@ -91,6 +91,12 @@
     <Compile Include="PdfCreator.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="SelectLogo.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="SelectLogo.Designer.cs">
+      <DependentUpon>SelectLogo.cs</DependentUpon>
+    </Compile>
     <EmbeddedResource Include="FilmName.resx">
       <DependentUpon>FilmName.cs</DependentUpon>
     </EmbeddedResource>
@@ -107,6 +113,9 @@
       <DependentUpon>Resources.resx</DependentUpon>
       <DesignTime>True</DesignTime>
     </Compile>
+    <EmbeddedResource Include="SelectLogo.resx">
+      <DependentUpon>SelectLogo.cs</DependentUpon>
+    </EmbeddedResource>
     <None Include="packages.config" />
     <None Include="Properties\Settings.settings">
       <Generator>SettingsSingleFileGenerator</Generator>
@@ -120,6 +129,15 @@
   </ItemGroup>
   <ItemGroup>
     <None Include="App.config" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="Bright_Way_Logo.png" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="Images\Hopstarter-Soft-Scraps-Document-Preview.ico" />
+  </ItemGroup>
+  <ItemGroup>
+    <Content Include="Images\Bright_Way_Logo.jpg" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
